runners/calculator: Do not show results when expression is invalid

See https://github.com/Qalculate/libqalculate/issues/442 for the code snippets.
I have only adjusted those to compile inside of the plugin.

BUG: 454132